    We are redirected to edit form after a rule has been added.
  - Add form and Edit form are now consistent.
  - Notify user by many ways when a rule is not assigned anywhere yet.
  - We can assign a rule on whole site by a simple button.
  - Ajaxify conditions and actions reordering and removing.
  - Focus on elements after adding an action or a condition.
  - Added tests.
  [vsomogyi, thomasdesvenain,
   based on nvangheem specifications,
   contribution wimbou,
   made @ploneconf2012 sprint]


2.2.1 (2013-01-01)
------------------

- Remove KSS dependency.
  [davisagli]


2.2.0 (2012-10-16)
------------------

- Unified the site setup html structure
  [TH-code]


2.1.9 (2012-08-30)
------------------

- Change mail template to use hex for curly brackets so that it doesn't barf when
  used with chameleon. This is a short term fix until https://github.com/malthe/chameleon/issues/88
  is appropriately fixed.
  [eleddy]

- Notify user with error message instead of a core dump if they set up a content
  mail action without the mailer set up. Prevents users from throwing computer out
  of window when they click save and all their hard entered data is gone.
  [eleddy]


2.1.8 (2012-08-11)
------------------

- Adding a content rule is not handled by 'added' rule...
  Fixes infinite loop on adding a content rule.
  [thomasdesvenain]

- ContainerModified event is excluded from 'modified' event handling.
  This avoids for example adding a comment to lauch 'modified' rules registered for it.
  [thomasdesvenain]


2.1.7 (2012-08-04)
------------------

- Added an option in email action
  to exclude user who did the action from recipients.
  [thomasdesvenain]


2.1.6 (2012-07-02)
------------------

- Avoid hard dependency on Archetypes.
  [davisagli]

- Fixed portaltype condition made
  type creation fail in portal_types.
  [thomasdesvenain]

- Don't trigger modified actions if the event was
  for adding or removing content. Fixes #12461
  [do3cc]
